--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,34 @@
     <title>Title</title>
 </head>
 <body>
+<div class="main">
+  <div class="left">
+    <div class="logo1 active">
+      <img src="images/logos/Vector.png" alt="logo1">
+    </div>
+    <!--  <div class="logo2">-->
+    <!--    <img src="images/logos/Vector2.png" alt="logo1">-->
+    <!--  </div>-->
+    <!--  <div class="logo3">-->
+    <!--    <img src="images/logos/Vector3.png" alt="logo1">-->
+    <!--  </div>-->
+    <div class="title1 active">Un nouvel espoir</div>
+    <p class="paragraph1 active">C'est le premier opus de la saga Star Wars <br>
+      par sa date de sortie, mais le quatrième<br>
+      selon l'ordre chronologique de l'histoire.
+    </p>
+    <div class="time1">1977</div>
+  </div>
+  <div class="right">
+    <div class="poster">
+      <img class="poster1" src="images/posters/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@%201.png" alt="Star Wars1">
+    </div>
+  </div>
+</div>
+<footer>
+  <div class="arrow1"></div>
+  <div class="arrow2"></div>
 
+</footer>
 </body>
 </html>
